# Generative-AI-with-Langchain

./: README.md  main.py  pyproject.toml  requirements.txt
generativeai/: agents.ipynb  langchainIntro.ipynb  tools.ipynb
